crates/zoid-tui/tests/snapshots/shell_snapshot__palette_direct_stage1_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 160, 40)"
---
"v0.8.0                                                                        zoid                                        Esc interrupt · : command · ^P palette"
"  00:00 › what's causing the 500?                                                                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                                                                                  █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(118, " ")]
"  00:00 zoid an unwrapped lookup in the handler.                                                                  █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                     ┌ : ───────────────────────────────────────────────────────────────────┐                     █                                             "
"                     │ session                                                              │                     █ ╭ ▾ session ──────────────────────────────╮ "
"                     │ mode                                                                 │                     █ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ companion                                                            │                     █ │🤖  ·                                    │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ compact                                                              │                     █ │⌚ tok 0  tps 0                          │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ config                                                               │                     █ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ help                                                                 │                     █ │📁 cwd                                   │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ q                                                                    │                     █ ╰─────────────────────────────────────────╯ "
"                     │ quit                                                                 │                     █                                             "
"                     │↑↓ move · ⏎ select · esc close · type to filter                       │                     █ ╭ ▾ context · tokens ─────────────────────╮ "
"                     │                                                                      │                     █ │churn                              cache │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     └──────────────────────────────────────────────────────────────────────┘                     █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT   SELECT                                                ⊟ compact     ● idle      ◐ tool                                                      zoom normal "
