crates/zoid-tui/tests/snapshots/shell_snapshot__palette_direct_stage2_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 160, 40)"
---
"v0.4.0                                                                        zoid                                        Esc interrupt · : command · ^P palette"
"  00:00 › what's causing the 500?                                                                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                                                                                  █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(118, " ")]
"  00:00 zoid an unwrapped lookup in the handler.                                                                  █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                     ┌ :session  ───────────────────────────────────────────────────────────┐                     █                                             "
"                     │ new                                                                  │                     █ ╭ ▾ session ──────────────────────────────╮ "
"                     │ rename                                                               │                     █ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ resume                                                               │                     █ │🤖  ·                                    │ " Hidden by multi-width symbols: [(118, " ")]
"                     │↑↓ move · ⏎ select · esc close · type to filter                       │                     █ │⌚ tok 0  tps 0                          │ " Hidden by multi-width symbols: [(118, " ")]
"                     │                                                                      │                     █ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(118, " ")]
"                     │                                                                      │                     █ │📁 cwd                                   │ " Hidden by multi-width symbols: [(118, " ")]
"                     │                                                                      │                     █ ╰─────────────────────────────────────────╯ "
"                     │                                                                      │                     █                                             "
"                     │                                                                      │                     █ ╭ ▾ context · tokens ─────────────────────╮ "
"                     │                                                                      │                     █ │churn                              cache │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     │                                                                      │                     █ │                                         │ "
"                     └──────────────────────────────────────────────────────────────────────┘                     █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                                                                                  █ │no tasks                                 │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ │                                         │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                                                         ⊟ compact     ● idle      ◐ tool                                                      zoom normal "
