crates/zoid-tui/tests/snapshots/shell_snapshot__palette_direct_stage3_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 100, 24)"
---
"v0.1.2                                          zoid          Esc interrupt · : command · ^P palette"
"┌ :session rename  ───────────────────────────────────┐ ╭ ▾ repo ─────────────────────────────────╮ "
"│→ Rename session:                                    │ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(58, " ")]
"│ fix 500                                             │ ╰─────────────────────────────────────────╯ "
"│ add auth                                            │                                             "
"│↑↓ move · ⏎ select · esc close · type to filter      │ ╭ ▾ session ──────────────────────────────╮ "
"│                                                     │ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │🤖  ·                                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │⌚ dur 0m   tok/cac 0                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ context · tokens ─────────────────────╮ "
"│                                                     │ │churn                              cache │ "
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ tasks ────────────────────────────────╮ "
"│                                                     │ │no tasks                                 │ "
"└─────────────────────────────────────────────────────┘ ╰─────────────────────────────────────────╯ "
"                                                      █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                           ⊟ compact     ● idle      ◐ tool                        zoom normal "
