crates/zoid-tui/tests/snapshots/shell_snapshot__palette_overlay_empty_query_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 160, 40)"
---
" SELECT                                                                   zoid v0.9.0                                     Esc interrupt · : command · ^P palette"
"  00:00 › what's causing the 500?                                                                                 █ ╭ ▾ repo ─────────────────────────────────╮ "
"                                                                                                                  █ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(118, " ")]
"  00:00 zoid an unwrapped lookup in the handler.                                                                  █ │🔧 worktree (none)                       │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ │📝 changes +0 -0 · 0 files               │ " Hidden by multi-width symbols: [(118, " ")]
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                     ┌ ›  ──────────────────────────────────────────────────────────────────┐                     █                                             "
"                     │ New session                                                          │                     █ ╭ ▾ session ──────────────────────────────╮ "
"                     │ Resume session…                                                      │                     █ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ Rename session…                                                      │                     █ │🤖  ·                                    │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ Delegate task…                                                       │                     █ │⌚ tok 0  tps 0                          │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ Import mode from URL…                                                │                     █ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ Update mode…                                                         │                     █ │📁 cwd                                   │ " Hidden by multi-width symbols: [(118, " ")]
"                     │ Switch to Build                                                      │                     █ ╰─────────────────────────────────────────╯ "
"                     │ Reload modes                                                         │                     █                                             "
"                     │ Toggle repo drawer                                                   │                     █ ╭ ▾ context · tokens ─────────────────────╮ "
"                     │ Toggle session drawer                                                │                     █ │churn                              cache │ "
"                     │ Toggle context drawer                                                │                     █ │                                         │ "
"                     │ Open settings                                                        │                     █ │                                         │ "
"                     │ MCP servers…                                                         │                     █ │                                         │ "
"                     │ Keyboard shortcuts…                                                  │                     █ │                                         │ "
"                     │ Submit feedback…                                                     │                     █ │                                         │ "
"                     │ Enable companion                                                     │                     █ │                                         │ "
"                     └──────────────────────────────────────────────────────────────────────┘                     █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ subagents ────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █ ╭ ▾ tasks ────────────────────────────────╮ "
"                                                                                                                  █ │none                                     │ "
"                                                                                                                  █ ╰─────────────────────────────────────────╯ "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"                                                                                                                  █                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT                                                         ⊟ compact     ● idle      ◐ tool                                                      zoom normal "
