crates/zoid-tui/tests/snapshots/shell_snapshot__palette_overlay_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
assertion_line: 128
expression: "draw(&s, &seeded(), 100, 24)"
---
" zoid  CHAT  ⎇ main                                                                                 "
"┌ › build ────────────────────────────────────────────┐ ▾ context · tokens  ^5                      "
"│MODE                                                 │  churn                                      "
"│ ⇢ Switch to Build  continue this conversation into t│  [x] evict cold                           0 "
"│BRANCH ⎇ · POST-V1                                   │                                             "
"│ ⎇ Fork from here  new branch at this turn  :fork    │                                             "
"│ ⤺ Undo last turn  move head back  u                 │                                             "
"│NAVIGATE                                             │                                             "
"│ ▤ Open files drawer  browse the working tree  ^F    │                                             "
"│ ⎇ Open branch drawer  current branch  ^B            │ ▸ files  ^F                                 "
"│CONTEXT ⑤ · P3                                       │                                             "
"│ ● Pin file to context  lands in P3                  │ ▸ branch  ^B                                "
"│ ✕ Evict cold items  lands in P3                     │                                             "
"│SETTINGS                                             │                                             "
"│ ◆ Quit zoid  exit  ^C                               │                                             "
"│RECIPES · POST-V1                                    │                                             "
"│ ▷ Run recipe…  post-v1                              │                                             "
"│                                                     │                                             "
"└─────────────────────────────────────────────────────┘                                             "
"                                                                                                    "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT  ⎇ main · zoom normal · ^P palette · ⇧Tab → Build · ^C quit                                   "
