crates/zoid-tui/tests/snapshots/shell_snapshot__palette_overlay_scrolled_to_end_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: out
---
" zoid ● idle                                                                                        "
"┌ ›  ─────────────────────────────────────────────────┐ ╭ ▾ repo ─────────────────────────────────╮ "
"│ + New session  fresh thread + clean context budget  │ │repo   ⎇ main                            │ "
"│ ↺ Resume session…  this repo, most-recent first  ⏎  │ │worktree (none)                          │ "
"│ ✎ Rename session…  rename the current thread  :renam│ │changes +0 -0 · 0 files                  │ "
"│MODE                                                 │ ╰─────────────────────────────────────────╯ "
"│ ⇢ Switch to Build  continue this conversation into t│                                             "
"│BRANCH ⎇                                             │ ╭ ▾ session ──────────────────────────────╮ "
"│ ⎇ Fork from here  new branch at this turn  :fork    │ │(unnamed)                                │ "
"│ ⤺ Undo last turn  move head back  u                 │ │ ·                                       │ "
"│CONTEXT                                              │ │dur 0m   tok 0                           │ "
"│ ● Pin file to context  coming soon                  │ │ctx 0                                    │ "
"│ ✕ Evict cold items  coming soon                     │ │cwd                                      │ "
"│SETTINGS                                             │ ╰─────────────────────────────────────────╯ "
"│ ◆ Quit zoid  exit  ^C                               │                                             "
"└─────────────────────────────────────────────────────┘                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT  zoom normal · ^P palette                                                                     "
