crates/zoid-tui/tests/snapshots/shell_snapshot__provider_switch_card.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: terminal.backend().to_string()
---
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                ╭ zoid · quick switch ─────────────────────────────────────────────────────────────────────────╮                                "
"                                │ Provider                                       Model                                         │                                "
"                                │   ollama · local  http  http://localhost:11…     claude-opus-4-8                             │                                "
"                                │ ▸ ollama · cloud  http  https://ollama.com       claude-sonnet-4-6                           │                                "
"                                │   anthropic · api key  http  https://api.an…                                                 │                                "
"                                │   anthropic · Claude Code CLI  cli  claude …                                                 │                                "
"                                │   anthropic · SDK  sdk  —  planned                                                           │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │                                                                                              │                                "
"                                │ Left/Right pane · Up/Down move · Enter apply · Esc cancel                                    │                                "
"                                ╰──────────────────────────────────────────────────────────────────────────────────────────────╯                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
"                                                                                                                                                                "
